# neulander-medcat-worker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml  ruff.toml  sample.env
.github/workflows/: build-and-push.yaml
src/: main.py
